--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -2,6 +2,16 @@ body{
     font-family: 'PT Sans', sans-serif;
 }
 
+.axis text {
+    font: 10px sans-serif;
+}
+
+.axis line,
+.axis path {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
 
 .boundingBox{
     cursor: pointer;
@@ -10,11 +20,6 @@ body{
     pointer-events: all;
 }
 
-.brush{
-    fill: darkgrey;
-    fill-opacity: .5;
-    pointer-events: none;
-}
 
 .label{
     color: black;
