--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -516,6 +516,7 @@ a:active {
 #legend {
     left:510px;
     margin-top: 10px;
+    opacity:0.75;
 }
 
 #legend2 {
@@ -529,8 +530,8 @@ a:active {
     font-size: 12px;
     letter-spacing: 2px;
     position:absolute;
-    
-    margin-top: 80px;
+    z-index:1;
+    margin-top: -150px;
     text-align: center;
 }
 
