--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -225,15 +225,17 @@ a:active {
     font-weight:200;
     text-align: center;
     
-    margin-left: 37%;
-    margin-right: 37%;
+    margin-left: 40%;
+    margin-right: 40%;
     border-style: solid;
     border-width: 1px;
 }
 
 .temp_title_4 {
+    font-size: 12px;
     color:grey;
     margin-bottom: 120px;
+    width:270px;
 }
 
 .temp_title_begin {
@@ -415,6 +417,7 @@ ul {
 
 .navbar {
     margin-bottom: 10px;
+    /*background-color: #F8F8F8;*/
 }
 
 #nav, #nav2, #nav3, #nav4 {
@@ -448,9 +451,8 @@ ul {
     display: inline-block;
 }
 
-#gdpBtn, #popBtn, #forestBtn {
-    position:absolute;
-    z-index:1;
+.history_button {
+    
 }
 
 #gdpBtn {
@@ -538,6 +540,8 @@ ul {
     border-image: none;
     border-style: solid;
     border-style: solid;
+    position:absolute;
+    z-index:1;
 }
 
 .history_btn {
