--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -665,3 +665,12 @@ a:active {
         background-color: rgba(245,245,245,.75);
         font-size: 14px;
 }
+
+.tooltip_bubbles {
+    visibility:hidden;
+        position: absolute;
+        width: 150px;
+        padding: 10px;
+        background-color: rgba(245,245,245,.75);
+        font-size: 10px;
+}
