added more axes, labels and details

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -527,10 +527,25 @@ ul {
     font-size:12px;
 }
 
+.emissions_axis {
+    position:absolute;
+    top:100px;
+    fill:grey;
+    font-size: 12px;
+}
+
+.emissions_axis line{
+    height:10px;
+    stroke: grey;
+}
+
+.emissions_axis path {
+}
+
 .history_text, .history_text_bottom {
     position: absolute;
     margin-left: 0px;
-    padding-top: 10px;
+    
     padding-left: 15px;
     padding-right: 13px;
     width:270px;
@@ -542,11 +557,13 @@ ul {
 .history_text {
     margin-top: -195px;
     height:180px;
+    padding-top: 10px;
 }
 
 .history_text_bottom {
     margin-top: 0px;
     height: 220px;
+    padding-top: 7px;
 }
 
 .history_btn, .btn_on {
